--- a/folder-yaml/alpine.base.yml
+++ b/folder-yaml/alpine.base.yml
@@ -1,14 +1,28 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: alpine-base
+  name: httpd
+  labels:
+    app:  httpd
 spec:
-  containers:
-    - name: alpine-base
-      image: alpine.base
-      imagePullPolicy: IfNotPresent
-      stdin: true
-      tty: true
-      ports:
-      - name: http
-        containerPort: 8888
+  replicas: 2
+  selector:
+    matchLabels:
+      app: httpd
+  template:
+    metadata:
+      labels:
+        app: httpd
+    spec:
+      containers:
+      - name: httpd
+        image: alpine.base
+        imagePullPolicy: IfNotPresent
+        resources:
+          requests:
+            cpu: 50m
+        stdin: true
+        tty: true
+        ports:
+        - name: http
+          containerPort: 8888
