--- a/folder-yaml/hpa-sp.yml
+++ b/folder-yaml/hpa-sp.yml
@@ -1,12 +1,12 @@
-apiVersion: autoscaling/v1
-kind: HorizontalPodAutoscaler
+apapiVersion: autoscaling/v1 
+kind: HorizontalPodAutoscaler 	#提供應用系統的自動擴充簡稱 (HPA)
 metadata:
   name: hpa-sp
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: httpd
-  minReplicas: 2
-  maxReplicas: 6
-  targetCPUUtilizationPercentage: 30
+    name: httpd   	 	#HPA 會搜尋有 httpd 標籤的 Deployment
+  minReplicas: 2  		#最小的應用系統數量(pod)
+  maxReplicas: 6  	#最大的應用系統數量(pod)
+  targetCPUUtilizationPercentage: 30 		#應用系統 (pod) 運算資源使用百分比，當超過這個百分比即會自動擴展
